<resources>
    <string name="app_name">TwitchApp</string>
    <string name="image_desc">画像がありません</string>

    <!--StreamFragment-->
    <string name="stream_fragment_title">Live Stream</string>
    <string name="paging_retry_btn_text">Retry</string>
    <string name="network_error_msg">Network Error</string>
    <string name="paging_error_text">読み込めませんでした</string>

    <!--ClipFragment-->
    <string name="clip_fragment_title">Popular Clips</string>
    <string name="clip_save">Popular Clips</string>
    <string name="clip_get_error">Network Error</string>

    <!--MyProfileFragment-->
    <string name="profile_title">Profile</string>
    <string name="no_name">No Name</string>
    <string name="favorite_clips_title">Favorite Clips</string>

    <!--ボトムナビゲーションネームのアイコン-->
    <string name="menu_stream_title">Live</string>
    <string name="menu_profile_title">Profile</string>
    <string name="menu_clip_title">Clip</string>

    <!--ダイアログ関連-->
    <string name="dialog_title">Edit Profile</string>
    <string name="dialog_btn_ok">OK</string>
    <string name="dialog_btn_cancel">Cancel</string>
    <string name="dialog_input_label">Name</string>
    <string name="dialog_error_empty_label">名前を入力してください</string>
    <string name="dialog_error_over_label">%d 文字以内で入力してください</string>
    <string name="dialog_filter">Select Game</string>

    <!--いいねの数-->
    <string name="nothing_favo">いいねがありません</string>
    <string name="number_likes">0</string>

    <!--ボトムシートダイアログ-->
    <string name="dialog_favorite">いいね</string>
    <string name="dialog_copy">URLをコピー</string>
    <string name="dialog_delete">削除する</string>
    <string name="dialog_play">再生する</string>
    <string name="dialog_back">閉じる</string>

</resources>