<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:orientation="vertical">

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/theme"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/item_play"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:drawablePadding="10dp"
            android:paddingStart="4dp"
            android:paddingEnd="0dp"
            android:text="@string/dialog_play"
            android:textColor="@color/white"
            android:visibility="gone"
            app:drawableStartCompat="@drawable/ic_play"
            app:drawableTint="@color/white" />

        <View
            android:id="@+id/line_1"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/theme"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/item_favorite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:drawablePadding="10dp"
            android:paddingStart="4dp"
            android:paddingEnd="0dp"
            android:text="@string/dialog_favorite"
            android:textColor="@color/white"
            android:visibility="gone"
            app:drawableStartCompat="@drawable/ic_favorite"
            app:drawableTint="@color/white" />

        <View
            android:id="@+id/line_2"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/theme"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/item_delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:drawablePadding="10dp"
            android:paddingStart="4dp"
            android:paddingEnd="0dp"
            android:text="@string/dialog_delete"
            android:textColor="@color/white"
            android:visibility="gone"
            app:drawableStartCompat="@drawable/ic_delete"
            app:drawableTint="@color/white" />

        <View
            android:id="@+id/line_3"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/theme"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/item_copy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:drawablePadding="10dp"
            android:paddingStart="4dp"
            android:paddingEnd="0dp"
            android:text="@string/dialog_copy"
            android:textColor="@color/white"
            android:visibility="gone"
            app:drawableStartCompat="@drawable/ic_copy" />

        <View
            android:id="@+id/line_4"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/theme"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/item_back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:drawablePadding="10dp"
            android:paddingStart="4dp"
            android:paddingEnd="0dp"
            android:text="@string/dialog_back"
            android:textColor="@color/white"
            android:visibility="visible"
            app:drawableStartCompat="@drawable/ic_close" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="80dp"
            android:background="@color/theme"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </LinearLayout>
</layout>