<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.myprofile.MyProfileFragment">

    <View
        android:id="@+id/top_line"
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:layout_marginBottom="8dp"
        android:background="@color/theme"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/profile_icon"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="12dp"
        android:contentDescription="@string/image_desc"
        android:src="@drawable/ic_profile"
        app:layout_constraintBottom_toBottomOf="@id/profile_title"
        app:layout_constraintEnd_toStartOf="@id/profile_title"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/profile_title"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/profile_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/profile_title"
        android:textColor="@color/white"
        android:textSize="26sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/profile_icon"
        app:layout_constraintTop_toBottomOf="@+id/top_line" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/my_profile_image"
        android:layout_width="58dp"
        android:layout_height="58dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/image_desc"
        android:src="@drawable/no_profile_image"
        app:layout_constraintEnd_toStartOf="@id/num_likes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_title" />

    <TextView
        android:id="@+id/my_profile_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_name"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/num_likes"
        app:layout_constraintEnd_toStartOf="@+id/btn_edit"
        app:layout_constraintStart_toEndOf="@+id/my_profile_image"
        app:layout_constraintTop_toTopOf="@+id/my_profile_image" />

    <ImageView
        android:id="@+id/heart_icon"
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:layout_marginEnd="4dp"
        android:contentDescription="@string/image_desc"
        android:src="@drawable/ic_favorite"
        app:layout_constraintBottom_toBottomOf="@id/num_likes"
        app:layout_constraintEnd_toStartOf="@id/num_likes"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintTop_toTopOf="@id/num_likes" />

    <TextView
        android:id="@+id/num_likes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_likes"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="@+id/my_profile_image"
        app:layout_constraintEnd_toStartOf="@+id/btn_edit"
        app:layout_constraintStart_toEndOf="@+id/my_profile_image"
        app:layout_constraintTop_toBottomOf="@+id/my_profile_name" />

    <ImageButton
        android:id="@+id/btn_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/image_desc"
        android:padding="12dp"
        android:src="@drawable/ic_edit"
        app:layout_constraintBottom_toBottomOf="@+id/my_profile_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/num_likes"
        app:layout_constraintTop_toTopOf="@+id/my_profile_image" />

    <View
        android:id="@+id/medium_line"
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:layout_marginTop="10dp"
        android:background="@color/theme"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_profile_image" />

    <TextView
        android:id="@+id/favorite_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/favorite_clips_title"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/medium_line" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/filter_game_image"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/image_desc"
        android:src="@drawable/game_icon"
        app:layout_constraintBottom_toBottomOf="@id/favorite_title"
        app:layout_constraintEnd_toStartOf="@+id/btn_filter"
        app:layout_constraintTop_toTopOf="@id/favorite_title" />

    <ImageView
        android:id="@+id/btn_filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:contentDescription="@string/image_desc"
        android:src="@drawable/ic_filter"
        app:layout_constraintBottom_toBottomOf="@id/favorite_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/favorite_title" />

    <TextView
        android:id="@+id/empty_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/nothing_favo"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/favorite_title" />

    <View
        android:id="@+id/bottom_line_item"
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="4dp"
        android:background="@color/theme"
        app:layout_constraintBottom_toTopOf="@+id/favorite_recycler_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/favorite_title" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/favorite_recycler_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingBottom="230dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/favorite_title" />

    <ProgressBar
        android:id="@+id/progressbar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:background="@android:color/transparent"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/favorite_title" />

</androidx.constraintlayout.widget.ConstraintLayout>
