<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.MyProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:id="@+id/top_line"
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="8dp"
            android:background="@color/theme"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/profile_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/profile_title"
            android:textColor="@color/white"
            android:textSize="26sp"
            android:textStyle="italic"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/top_line" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/avatar_img"
            android:layout_width="58dp"
            android:layout_height="58dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/image_desc"
            android:src="@drawable/ic_profile"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/num_likes"
            app:layout_constraintTop_toBottomOf="@+id/profile_title" />

        <TextView
            android:id="@+id/my_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Yuuuki"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/num_likes"
            app:layout_constraintLeft_toRightOf="@+id/avatar_img"
            app:layout_constraintRight_toLeftOf="@+id/btn_edit"
            app:layout_constraintTop_toTopOf="@+id/avatar_img" />

        <TextView
            android:id="@+id/num_likes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Likes 12"
            android:textColor="@color/white"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="@+id/avatar_img"
            app:layout_constraintLeft_toRightOf="@+id/avatar_img"
            app:layout_constraintRight_toLeftOf="@+id/btn_edit"
            app:layout_constraintTop_toBottomOf="@+id/my_name" />

        <Button
            android:id="@+id/btn_edit"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="edit"
            app:layout_constraintBottom_toBottomOf="@+id/avatar_img"
            app:layout_constraintLeft_toRightOf="@+id/num_likes"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/avatar_img" />

        <View
            android:id="@+id/medium_line"
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:layout_marginTop="10dp"
            android:background="@color/theme"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/avatar_img" />

        <TextView
            android:id="@+id/favorite_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/favorite_fragment_title"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="italic"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/medium_line" />

        <TextView
            android:id="@+id/empty_mag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/nothing_favo"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:visibility="gone"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/favorite_title" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/favorite_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/favorite_title" />

        <ProgressBar
            android:id="@+id/progressbar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/favorite_recycler_view" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>